--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    background-color: theme('colors.background');
-    color: theme('colors.primary');
+html,
+body {
+  background-color: theme("colors.background");
+  color: theme("colors.primary");
 }
