--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,9 +1,17 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html,
 body {
-  background-color: theme("colors.background");
-  color: theme("colors.primary");
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #292c32;
+  color: #646669;
+}
+
+button {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 700;
+  border: 1px solid;
+  border-color: #646669;
+  border-radius: 0.5rem;
+  color: #646669;
+  background-color: #292c32;
+  padding: 0.5rem 1rem 0.5rem 1rem;
 }
