invite a friend component (#11)

--- a/frontend/src/lib/scss/_theme.scss
+++ b/frontend/src/lib/scss/_theme.scss
@@ -16,6 +16,7 @@
   @include define-color("unselected", #646669);
   @include define-color("page-background", #323437);
   @include define-color("component-background", #2c2e31);
+  @include define-color("component-background-2", #41454a);
   @include define-color("button-active", #5f606a);
 }
 
