--- a/frontend/src/lib/scss/_mixins.scss
+++ b/frontend/src/lib/scss/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin container {
-    border-color: var(--color--component-background);
+    border-color: var(--color--component);
     outline: none;
     border: none;
     border-radius: 0.5rem;
-    background-color: var(--color--component-background);
+    background-color: var(--color--component);
   }
